--- a/visit_korea_Tourism_Area.ipynb
+++ b/visit_korea_Tourism_Area.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "대한민국구석구석 | 여행지 목록\n",
+      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=37\n",
+      "896\n",
+      "대한민국구석구석 | 여행지 목록\n",
+      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=38\n",
+      "1024\n",
+      "대한민국구석구석 | 여행지 목록\n",
+      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=39\n",
+      "344\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from selenium import webdriver\n",
@@ -33,28 +49,36 @@
     "    actions.move_to_element(tag)\n",
     "    actions.double_click(tag)\n",
     "    actions.perform()\n",
-    "\n",
+    "    \n",
+    "    time.sleep(3)\n",
+    "    \n",
     "    rank = driver.find_element_by_css_selector(\".btn_txt > button[id='3']\")\n",
     "    actions = webdriver.ActionChains(driver)\n",
     "    actions.move_to_element(rank)\n",
     "    actions.double_click(rank)\n",
     "    actions.perform()\n",
-    "\n",
-    "    data_num = int(driver.find_element_by_css_selector(\"#totalCnt\").text)\n",
+    "    \n",
+    "    time.sleep(3)\n",
+    "    \n",
+    "    if ',' in driver.find_element_by_css_selector(\"#totalCnt\").text:\n",
+    "        data_num = int(''.join(driver.find_element_by_css_selector(\"#totalCnt\").text.split(',')))\n",
+    "    else:\n",
+    "        data_num = int(driver.find_element_by_css_selector(\"#totalCnt\").text)\n",
+    "    \n",
+    "    print(data_num)\n",
     "\n",
     "    travel_data = []\n",
     "\n",
-    "    time.sleep(2)\n",
-    "\n",
+    "    \n",
     "    for j in range((data_num // 10) + 1):\n",
-    "\n",
-    "        page = driver.find_element_by_css_selector(f\".page_box > a[id='{j + 1}']\")\n",
+    "        if driver.find_element_by_css_selector(f\".page_box > a[id='{j + 1}']\"):\n",
+    "            page = driver.find_element_by_css_selector(f\".page_box > a[id='{j + 1}']\")\n",
     "        actions = webdriver.ActionChains(driver)\n",
     "        actions.move_to_element(page)\n",
     "        actions.double_click(page)\n",
     "        actions.perform()\n",
     "\n",
-    "        time.sleep(2)\n",
+    "        time.sleep(3)\n",
     "\n",
     "        names = driver.find_elements_by_css_selector(\".bdr_nor > .area_txt > .tit > a\")\n",
     "        regions = driver.find_elements_by_css_selector(\"#contents > div.wrap_contView.clfix > div.box_leftType1 > ul > li > div.area_txt > p:nth-child(2)\")\n",
@@ -96,7 +120,7 @@
     "        #     print(travel_dict)\n",
     "            travel_data.append(travel_dict)\n",
     "\n",
-    "    with open(f'./travel_data/{region[:2]}_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
+    "    with open(f'./travel_data/{region[:2]}_tourism_area_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
     "        fieldnames = ['name', 'region', 'tel', 'keyword', 'photo']\n",
     "        csvfile = csv.DictWriter(file, fieldnames = fieldnames)\n",
     "        csvfile.writeheader()\n",
