--- a/visit_korea_Leports.ipynb
+++ b/visit_korea_Leports.ipynb
@@ -10,37 +10,16 @@
      "output_type": "stream",
      "text": [
       "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=31\n",
-      "984\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=32\n",
-      "1332\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=33\n",
-      "628\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=34\n",
-      "677\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=35\n",
-      "1106\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=36\n",
-      "947\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=37\n",
-      "896\n",
-      "대한민국구석구석 | 여행지 목록\n",
       "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=38\n",
-      "1024\n",
+      "71\n",
       "대한민국구석구석 | 여행지 목록\n",
       "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=39\n",
-      "343\n"
+      "98\n"
      ]
     }
    ],
    "source": [
-    "# 관광지\n",
+    "# 레포츠\n",
     "import requests\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -67,14 +46,13 @@
     "\n",
     "areacode_arr = [1, 2, 3, 4, 5, 6, 7, 8, 31, 32, 33, 34, 35, 36, 37, 38, 39]\n",
     "\n",
-    "\n",
     "for areacode in areacode_arr:\n",
     "    driver.get(f\"https://korean.visitkorea.or.kr/list/ms_list.do?areacode={areacode}\")\n",
     "\n",
     "    print(driver.title)\n",
     "    print(driver.current_url)\n",
     "\n",
-    "    tag = driver.find_element_by_css_selector(\"li[id='3f36ca4b-6f45-45cb-9042-265c96a4868c'] > button > span\")\n",
+    "    tag = driver.find_element_by_css_selector(\"li[id='e6875575-2cc2-43ba-9651-28d31a7b3e23'] > button > span\")\n",
     "\n",
     "    actions = webdriver.ActionChains(driver)\n",
     "    actions.move_to_element(tag)\n",
@@ -155,79 +133,12 @@
     "        #     print(travel_dict)\n",
     "            travel_data.append(travel_dict)\n",
     "\n",
-    "    with open(f'./travel_data_tourism_area/{region[:2]}_tourism_area_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
+    "    with open(f'./travel_data_Leports/{region[:2]}_Leports_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
     "        fieldnames = ['name', 'region', 'tel', 'keyword', 'photo']\n",
     "        csvfile = csv.DictWriter(file, fieldnames = fieldnames)\n",
     "        csvfile.writeheader()\n",
     "        for f in travel_data:\n",
     "            csvfile.writerow(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__enter__',\n",
-       " '__eq__',\n",
-       " '__exit__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_actions',\n",
-       " '_driver',\n",
-       " 'click',\n",
-       " 'click_and_hold',\n",
-       " 'context_click',\n",
-       " 'double_click',\n",
-       " 'drag_and_drop',\n",
-       " 'drag_and_drop_by_offset',\n",
-       " 'key_down',\n",
-       " 'key_up',\n",
-       " 'move_by_offset',\n",
-       " 'move_to_element',\n",
-       " 'move_to_element_with_offset',\n",
-       " 'pause',\n",
-       " 'perform',\n",
-       " 'release',\n",
-       " 'reset_actions',\n",
-       " 'send_keys',\n",
-       " 'send_keys_to_element',\n",
-       " 'w3c_actions']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(actions)"
    ]
   }
  ],
