--- a/crawling_ipynb/visit_korea_experience.ipynb
+++ b/crawling_ipynb/visit_korea_experience.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,25 +10,13 @@
      "output_type": "stream",
      "text": [
       "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=35\n",
-      "79\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=36\n",
-      "60\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=37\n",
-      "62\n",
-      "대한민국구석구석 | 여행지 목록\n",
       "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=38\n",
-      "80\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=39\n",
-      "39\n"
+      "92\n"
      ]
     }
    ],
    "source": [
-    "# 쇼핑\n",
+    "# 체험\n",
     "import requests\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -61,7 +49,7 @@
     "    print(driver.title)\n",
     "    print(driver.current_url)\n",
     "\n",
-    "    tag = driver.find_element_by_css_selector(\"li[id='0f29b431-75ac-4ab4-a892-b247d516b31d'] > button > span\")\n",
+    "    tag = driver.find_element_by_css_selector(\"#taglist> li:nth-child(8) > button > span\")\n",
     "\n",
     "    actions = webdriver.ActionChains(driver)\n",
     "    actions.move_to_element(tag)\n",
@@ -142,7 +130,7 @@
     "        #     print(travel_dict)\n",
     "            travel_data.append(travel_dict)\n",
     "\n",
-    "    with open(f'./travel_data_shopping/{region[:2]}_shopping_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
+    "    with open(f'./travel_data_experience/{region[:2]}_experience_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
     "        fieldnames = ['name', 'region', 'tel', 'keyword', 'photo']\n",
     "        csvfile = csv.DictWriter(file, fieldnames = fieldnames)\n",
     "        csvfile.writeheader()\n",
