--- a/crawling_ipynb/visit_korea_history.ipynb
+++ b/crawling_ipynb/visit_korea_history.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,12 +11,15 @@
      "text": [
       "대한민국구석구석 | 여행지 목록\n",
       "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=38\n",
-      "92\n"
+      "377\n",
+      "대한민국구석구석 | 여행지 목록\n",
+      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=39\n",
+      "48\n"
      ]
     }
    ],
    "source": [
-    "# 체험\n",
+    "# 역사\n",
     "import requests\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -43,13 +46,14 @@
     "\n",
     "areacode_arr = [1, 2, 3, 4, 5, 6, 7, 8, 31, 32, 33, 34, 35, 36, 37, 38, 39]\n",
     "\n",
+    "\n",
     "for areacode in areacode_arr:\n",
     "    driver.get(f\"https://korean.visitkorea.or.kr/list/ms_list.do?areacode={areacode}\")\n",
     "\n",
     "    print(driver.title)\n",
     "    print(driver.current_url)\n",
     "\n",
-    "    tag = driver.find_element_by_css_selector(\"li[id='23bc02b8-da01-41bf-8118-af882436cd3c'] > button > span\")\n",
+    "    tag = driver.find_element_by_css_selector(\"#taglist> li:nth-child(9) > button > span\")\n",
     "\n",
     "    actions = webdriver.ActionChains(driver)\n",
     "    actions.move_to_element(tag)\n",
@@ -130,7 +134,7 @@
     "        #     print(travel_dict)\n",
     "            travel_data.append(travel_dict)\n",
     "\n",
-    "    with open(f'./travel_data_experience/{region[:2]}_experience_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
+    "    with open(f'./travel_data_history/{region[:2]}_history_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
     "        fieldnames = ['name', 'region', 'tel', 'keyword', 'photo']\n",
     "        csvfile = csv.DictWriter(file, fieldnames = fieldnames)\n",
     "        csvfile.writeheader()\n",
