--- a/crawling_ipynb/visit_korea_Leports.ipynb
+++ b/crawling_ipynb/visit_korea_Leports.ipynb
@@ -10,46 +10,16 @@
      "output_type": "stream",
      "text": [
       "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=6\n",
-      "14\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=7\n",
-      "5\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=8\n",
-      "1\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=31\n",
-      "52\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=32\n",
-      "28\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=33\n",
-      "21\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=34\n",
-      "12\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=35\n",
-      "25\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=36\n",
-      "16\n",
-      "대한민국구석구석 | 여행지 목록\n",
-      "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=37\n",
-      "17\n",
-      "대한민국구석구석 | 여행지 목록\n",
       "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=38\n",
-      "22\n",
+      "71\n",
       "대한민국구석구석 | 여행지 목록\n",
       "https://korean.visitkorea.or.kr/list/ms_list.do?areacode=39\n",
-      "23\n"
+      "98\n"
      ]
     }
    ],
    "source": [
-    "# 실내\n",
+    "# 레포츠\n",
     "import requests\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -76,14 +46,13 @@
     "\n",
     "areacode_arr = [1, 2, 3, 4, 5, 6, 7, 8, 31, 32, 33, 34, 35, 36, 37, 38, 39]\n",
     "\n",
-    "\n",
     "for areacode in areacode_arr:\n",
     "    driver.get(f\"https://korean.visitkorea.or.kr/list/ms_list.do?areacode={areacode}\")\n",
     "\n",
     "    print(driver.title)\n",
     "    print(driver.current_url)\n",
     "\n",
-    "    tag = driver.find_element_by_css_selector(\"li[id='2d4f4e06-2d37-4e54-ad5c-172add6e6680'] > button > span\")\n",
+    "    tag = driver.find_element_by_css_selector(\"#taglist> li:nth-child(3) > button > span\")\n",
     "\n",
     "    actions = webdriver.ActionChains(driver)\n",
     "    actions.move_to_element(tag)\n",
@@ -164,7 +133,7 @@
     "        #     print(travel_dict)\n",
     "            travel_data.append(travel_dict)\n",
     "\n",
-    "    with open(f'./travel_data_indoor/{region[:2]}_indoor_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
+    "    with open(f'./travel_data_Leports/{region[:2]}_Leports_data.csv', 'w', encoding='utf-8-sig', newline='') as file:\n",
     "        fieldnames = ['name', 'region', 'tel', 'keyword', 'photo']\n",
     "        csvfile = csv.DictWriter(file, fieldnames = fieldnames)\n",
     "        csvfile.writeheader()\n",
