--- a/crawling_ipynb/visit_korea_culture.ipynb
+++ b/crawling_ipynb/visit_korea_culture.ipynb
@@ -53,7 +53,7 @@
     "    print(driver.title)\n",
     "    print(driver.current_url)\n",
     "\n",
-    "    tag = driver.find_element_by_css_selector(\"li[id='651c5b95-a5b3-11e8-8165-020027310001'] > button > span\")\n",
+    "    tag = driver.find_element_by_css_selector(\"#taglist> li:nth-child(2) > button > span\")\n",
     "\n",
     "    actions = webdriver.ActionChains(driver)\n",
     "    actions.move_to_element(tag)\n",
